--- a/firefox-version/manifest.json
+++ b/firefox-version/manifest.json
@@ -1,9 +1,14 @@
 {
   "manifest_version": 2,
   "name": "Redirect2WppWeb",
-  "version": "1.0",
+  "version": "1.0.1",
   "description": "Detecta números de celular e cria atalhos para o WhatsApp Web.",
   "permissions": ["contextMenus", "storage", "tabs", "<all_urls>"],
+  "icons": {
+    "16": "icons/icon-16.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
+  },
   "background": {
     "scripts": ["background.js"]
   },
@@ -16,7 +21,11 @@
   "options_page": "options.html",
   "browser_action": {
     "default_title": "Redirect2WppWeb",
-    "default_icon": "icon.png"
+     "default_icon": {
+      "16": "icons/icon-16.png",
+      "48": "icons/icon-48.png",
+      "128": "icons/icon-128.png"
+    }
   },
   "icons": {
     "128": "icon.png"
