--- a/manifest.json
+++ b/manifest.json
@@ -5,12 +5,12 @@
   "description": "Destaca números de telefone e adiciona ícone clicável para abrir no WhatsApp Web.",
   "options_page": "options.html",
   "host_permissions": ["<all_urls>"],
-  "permissions": ["contextMenus", "storage", "scripting", "activeTab"],
+  "permissions": ["contextMenus", "storage", "activeTab"],
   "background": {
     "service_worker": "background.js"
   },
   "content_security_policy": {
-	"extension_pages": "script-src 'self'; object-src 'self'"
+    "extension_pages": "script-src 'self'; object-src 'self'"
   },
   "content_scripts": [
     {
